--- a/QRCodeScanner/app/src/main/AndroidManifest.xml
+++ b/QRCodeScanner/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QRCodeScanner">
+        <activity android:name=".RegisterActivity"></activity>
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="fullSensor"
             tools:replace="screenOrientation" />
-
-        <activity android:name=".ScannerActivity"></activity>
+        <activity android:name=".ScannerActivity" />
         <activity android:name=".ScannarActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
