--- a/QRCodeScanner/build.gradle
+++ b/QRCodeScanner/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath "io.realm:realm-gradle-plugin:10.3.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
